ft(server): add create family logic
