# server/pb/rpc_create_family.pb.go
@@ -1,0 +1,223 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.34.2
+// 	protoc        v5.27.1
+// source: rpc_create_family.proto
+
+package pb
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type CreateFamilyRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	FamilyName string `protobuf:"bytes,1,opt,name=family_name,json=familyName,proto3" json:"family_name,omitempty"`
+}
+
+func (x *CreateFamilyRequest) Reset() {
+	*x = CreateFamilyRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_rpc_create_family_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateFamilyRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateFamilyRequest) ProtoMessage() {}
+
+func (x *CreateFamilyRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_rpc_create_family_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateFamilyRequest.ProtoReflect.Descriptor instead.
+func (*CreateFamilyRequest) Descriptor() ([]byte, []int) {
+	return file_rpc_create_family_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *CreateFamilyRequest) GetFamilyName() string {
+	if x != nil {
+		return x.FamilyName
+	}
+	return ""
+}
+
+type CreateFamilyResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Family          *Family `protobuf:"bytes,1,opt,name=family,proto3" json:"family,omitempty"`
+	PermissionToken string  `protobuf:"bytes,2,opt,name=permission_token,json=permissionToken,proto3" json:"permission_token,omitempty"`
+}
+
+func (x *CreateFamilyResponse) Reset() {
+	*x = CreateFamilyResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_rpc_create_family_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CreateFamilyResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateFamilyResponse) ProtoMessage() {}
+
+func (x *CreateFamilyResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_rpc_create_family_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateFamilyResponse.ProtoReflect.Descriptor instead.
+func (*CreateFamilyResponse) Descriptor() ([]byte, []int) {
+	return file_rpc_create_family_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *CreateFamilyResponse) GetFamily() *Family {
+	if x != nil {
+		return x.Family
+	}
+	return nil
+}
+
+func (x *CreateFamilyResponse) GetPermissionToken() string {
+	if x != nil {
+		return x.PermissionToken
+	}
+	return ""
+}
+
+var File_rpc_create_family_proto protoreflect.FileDescriptor
+
+var file_rpc_create_family_proto_rawDesc = []byte{
+	0x0a, 0x17, 0x72, 0x70, 0x63, 0x5f, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x5f, 0x66, 0x61, 0x6d,
+	0x69, 0x6c, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x02, 0x70, 0x62, 0x1a, 0x0c, 0x66,
+	0x61, 0x6d, 0x69, 0x6c, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x36, 0x0a, 0x13, 0x43,
+	0x72, 0x65, 0x61, 0x74, 0x65, 0x46, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65,
+	0x73, 0x74, 0x12, 0x1f, 0x0a, 0x0b, 0x66, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x5f, 0x6e, 0x61, 0x6d,
+	0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x66, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x4e,
+	0x61, 0x6d, 0x65, 0x22, 0x65, 0x0a, 0x14, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x46, 0x61, 0x6d,
+	0x69, 0x6c, 0x79, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x22, 0x0a, 0x06, 0x66,
+	0x61, 0x6d, 0x69, 0x6c, 0x79, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x0a, 0x2e, 0x70, 0x62,
+	0x2e, 0x46, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x52, 0x06, 0x66, 0x61, 0x6d, 0x69, 0x6c, 0x79, 0x12,
+	0x29, 0x0a, 0x10, 0x70, 0x65, 0x72, 0x6d, 0x69, 0x73, 0x73, 0x69, 0x6f, 0x6e, 0x5f, 0x74, 0x6f,
+	0x6b, 0x65, 0x6e, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0f, 0x70, 0x65, 0x72, 0x6d, 0x69,
+	0x73, 0x73, 0x69, 0x6f, 0x6e, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x42, 0x27, 0x5a, 0x25, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x52, 0x65, 0x6d, 0x78, 0x69, 0x6e, 0x2f,
+	0x68, 0x6f, 0x6d, 0x65, 0x2d, 0x6c, 0x69, 0x66, 0x65, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+}
+
+var (
+	file_rpc_create_family_proto_rawDescOnce sync.Once
+	file_rpc_create_family_proto_rawDescData = file_rpc_create_family_proto_rawDesc
+)
+
+func file_rpc_create_family_proto_rawDescGZIP() []byte {
+	file_rpc_create_family_proto_rawDescOnce.Do(func() {
+		file_rpc_create_family_proto_rawDescData = protoimpl.X.CompressGZIP(file_rpc_create_family_proto_rawDescData)
+	})
+	return file_rpc_create_family_proto_rawDescData
+}
+
+var file_rpc_create_family_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_rpc_create_family_proto_goTypes = []any{
+	(*CreateFamilyRequest)(nil),  // 0: pb.CreateFamilyRequest
+	(*CreateFamilyResponse)(nil), // 1: pb.CreateFamilyResponse
+	(*Family)(nil),               // 2: pb.Family
+}
+var file_rpc_create_family_proto_depIdxs = []int32{
+	2, // 0: pb.CreateFamilyResponse.family:type_name -> pb.Family
+	1, // [1:1] is the sub-list for method output_type
+	1, // [1:1] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
+}
+
+func init() { file_rpc_create_family_proto_init() }
+func file_rpc_create_family_proto_init() {
+	if File_rpc_create_family_proto != nil {
+		return
+	}
+	file_family_proto_init()
+	if !protoimpl.UnsafeEnabled {
+		file_rpc_create_family_proto_msgTypes[0].Exporter = func(v any, i int) any {
+			switch v := v.(*CreateFamilyRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_rpc_create_family_proto_msgTypes[1].Exporter = func(v any, i int) any {
+			switch v := v.(*CreateFamilyResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_rpc_create_family_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_rpc_create_family_proto_goTypes,
+		DependencyIndexes: file_rpc_create_family_proto_depIdxs,
+		MessageInfos:      file_rpc_create_family_proto_msgTypes,
+	}.Build()
+	File_rpc_create_family_proto = out.File
+	file_rpc_create_family_proto_rawDesc = nil
+	file_rpc_create_family_proto_goTypes = nil
+	file_rpc_create_family_proto_depIdxs = nil
+}
