# server/pb/service_home_life_grpc.pb.go
@@ -19,9 +19,11 @@ import (
 const _ = grpc.SupportPackageIsVersion8
 
 const (
-	HomeLife_CreateUser_FullMethodName = "/pb.HomeLife/CreateUser"
-	HomeLife_VerifyUser_FullMethodName = "/pb.HomeLife/VerifyUser"
-	HomeLife_LoginUser_FullMethodName  = "/pb.HomeLife/LoginUser"
+	HomeLife_CreateUser_FullMethodName   = "/pb.HomeLife/CreateUser"
+	HomeLife_VerifyUser_FullMethodName   = "/pb.HomeLife/VerifyUser"
+	HomeLife_LoginUser_FullMethodName    = "/pb.HomeLife/LoginUser"
+	HomeLife_CreateFamily_FullMethodName = "/pb.HomeLife/CreateFamily"
+	HomeLife_AddToFamily_FullMethodName  = "/pb.HomeLife/AddToFamily"
 )
 
 // HomeLifeClient is the client API for HomeLife service.
@@ -31,6 +33,8 @@ type HomeLifeClient interface {
 	CreateUser(ctx context.Context, in *CreateUserRequest, opts ...grpc.CallOption) (*CreateUserResponse, error)
 	VerifyUser(ctx context.Context, in *VerifyUserRequest, opts ...grpc.CallOption) (*VerifyUserResponse, error)
 	LoginUser(ctx context.Context, in *LoginUserRequest, opts ...grpc.CallOption) (*LoginUserResponse, error)
+	CreateFamily(ctx context.Context, in *CreateFamilyRequest, opts ...grpc.CallOption) (*CreateFamilyResponse, error)
+	AddToFamily(ctx context.Context, in *AddToFamilyRequest, opts ...grpc.CallOption) (*AddToFamilyResponse, error)
 }
 
 type homeLifeClient struct {
@@ -71,6 +75,26 @@ func (c *homeLifeClient) LoginUser(ctx context.Context, in *LoginUserRequest, op
 	return out, nil
 }
 
+func (c *homeLifeClient) CreateFamily(ctx context.Context, in *CreateFamilyRequest, opts ...grpc.CallOption) (*CreateFamilyResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CreateFamilyResponse)
+	err := c.cc.Invoke(ctx, HomeLife_CreateFamily_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *homeLifeClient) AddToFamily(ctx context.Context, in *AddToFamilyRequest, opts ...grpc.CallOption) (*AddToFamilyResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(AddToFamilyResponse)
+	err := c.cc.Invoke(ctx, HomeLife_AddToFamily_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // HomeLifeServer is the server API for HomeLife service.
 // All implementations must embed UnimplementedHomeLifeServer
 // for forward compatibility
@@ -78,6 +102,8 @@ type HomeLifeServer interface {
 	CreateUser(context.Context, *CreateUserRequest) (*CreateUserResponse, error)
 	VerifyUser(context.Context, *VerifyUserRequest) (*VerifyUserResponse, error)
 	LoginUser(context.Context, *LoginUserRequest) (*LoginUserResponse, error)
+	CreateFamily(context.Context, *CreateFamilyRequest) (*CreateFamilyResponse, error)
+	AddToFamily(context.Context, *AddToFamilyRequest) (*AddToFamilyResponse, error)
 	mustEmbedUnimplementedHomeLifeServer()
 }
 
@@ -93,6 +119,12 @@ func (UnimplementedHomeLifeServer) VerifyUser(context.Context, *VerifyUserReques
 }
 func (UnimplementedHomeLifeServer) LoginUser(context.Context, *LoginUserRequest) (*LoginUserResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method LoginUser not implemented")
+}
+func (UnimplementedHomeLifeServer) CreateFamily(context.Context, *CreateFamilyRequest) (*CreateFamilyResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateFamily not implemented")
+}
+func (UnimplementedHomeLifeServer) AddToFamily(context.Context, *AddToFamilyRequest) (*AddToFamilyResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AddToFamily not implemented")
 }
 func (UnimplementedHomeLifeServer) mustEmbedUnimplementedHomeLifeServer() {}
 
@@ -161,6 +193,42 @@ func _HomeLife_LoginUser_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _HomeLife_CreateFamily_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateFamilyRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HomeLifeServer).CreateFamily(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: HomeLife_CreateFamily_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HomeLifeServer).CreateFamily(ctx, req.(*CreateFamilyRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _HomeLife_AddToFamily_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AddToFamilyRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(HomeLifeServer).AddToFamily(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: HomeLife_AddToFamily_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(HomeLifeServer).AddToFamily(ctx, req.(*AddToFamilyRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // HomeLife_ServiceDesc is the grpc.ServiceDesc for HomeLife service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -179,6 +247,14 @@ var HomeLife_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "LoginUser",
 			Handler:    _HomeLife_LoginUser_Handler,
+		},
+		{
+			MethodName: "CreateFamily",
+			Handler:    _HomeLife_CreateFamily_Handler,
+		},
+		{
+			MethodName: "AddToFamily",
+			Handler:    _HomeLife_AddToFamily_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
